tests/ui/parser/issues/issue-105209.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-105209.rs:3:15
   |
LL | #![c={#![c[)x
   |   -  -  - -- ^
   |   |  |  | ||
   |   |  |  | |missing open `(` for this delimiter
   |   |  |  | unclosed delimiter before unmatched delimiter
   |   |  |  unclosed delimiter
   |   |  unclosed delimiter
   |   unclosed delimiter

error: aborting due to 1 previous error

