tests/ui/parser/issues/issue-105209.rs
//@ compile-flags: -Zunpretty=ast-tree
//~v ERROR this file contains an unclosed delimiter
#![c={#![c[)x
